# Proyecto2-BD

./: 01_ddl.sql  02_data.sql  Dockerfile.db  README.md  docker-compose.yml  test.sh
app/: Cargo.toml  Dockerfile
app/src/: main.rs
resultados/: resultados_consolidados.csv
